--- a/index.html
+++ b/index.html
@@ -40,17 +40,23 @@
     <!--shop-->
     <div class="container">
       <div class="shop">
-        <div class="pen">
-          <img class="productimg" src="./resources/pen.png">
-          <p class="productinfo">Exploding Pen</p>
+        <div class="product">
+          <div class="productimg">
+            <img src="./resources/pen.png">
+          </div>
+          <p>Exploding Pen</p>
         </div>
-        <div class="watch">
-          <img class="productimg" src="./resources/watch.png">
-          <p class="productinfo">Cellular Watch</p>
+        <div class="product">
+          <div class="productimg">
+            <img src="./resources/watch.png">
+          </div>
+          <p>Cellular Watch</p>
         </div>
-        <div class="glasses">
-          <img class="productimg" src="./resources/glasses.png">
-          <p class="productinfo">Thermal Glasses</p>
+        <div class="product">
+          <div class="productimg">
+            <img src="./resources/glasses.png">
+          </div>
+          <p>Thermal Glasses</p>
         </div>
       </div>
     </div>
