--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
     <!--location, hours-->
     <div class="container">
       <div class="info">
-        <div class="location">
+        <div class="infocont">
           <p class="head">Location</p>
-          <p>-47.346436, 8432354</p>
+          <p class="bottom">-47.346436, 8432354</p>
         </div>
-        <div class="hours">
+        <div class="infocont">
           <p class="head">Hours</p>
-          <p>0800 - 1800</p>
+          <p class="bottom">0800 - 1800</p>
         </div>
       </div>
     </div>
