--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
           <span>Glasses</span>
           <span>Contact</span>
         </div>
+        <div class="mobile">
+          <p>Menu</p>
+        </div>
       </nav>
     <!--shop-->
     <div class="container">
@@ -52,7 +55,7 @@
           </div>
           <p>Cellular Watch</p>
         </div>
-        <div class="product">
+        <div class="product glasses">
           <div class="productimg">
             <img src="./resources/glasses.png">
           </div>
