--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
           <p>Exploding Pen</p>
         </div>
-        <div class="product">
+        <div class="product watch">
           <div class="productimg">
             <img src="./resources/watch.png">
           </div>
